<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DARKxCHEAT</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="start_game">Start Game</string>
    <string name="update_game">Update Game</string>
    <string name="initial_status">Press Grant Permissions to begin</string>
    <string name="status_ready">Ready to launch</string>
    <string name="status_checking">Checking game…</string>
    <string name="status_not_installed">Game not installed</string>
    <string name="version_mismatch">Version mismatch! Please update your game.</string>
    <string name="launching">Launching…</string>
    <string name="launch_failed">Failed to launch</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="action_about">About</string>
    <string name="about_text">DARKxCHEAT Loader v1.0</string>
    <string name="telegram_url">https://t.me/darkxcheat</string>
    <string name="youtube_url">https://youtube.com/@darkxcheat</string>
    <string name="discord_url">https://discord.gg/darkxcheat</string>
    <string name="telegram">Join our Telegram Channel</string>
    <string name="contact_section">CONNECT WITH US</string>
</resources>
